# liteparse

./: MARKDOWN_PROGRESS.md
.github/workflows/: ci-node.yml  ci-python.yml  ci-wasm.yml  ci.yml  e2e-output.yml  release-crates.yml  release-node.yml  release-python.yml  release-wasm.yml
crates/liteparse/: Cargo.toml  README.md
crates/liteparse-napi/: Cargo.toml
crates/liteparse-napi/src/: types.rs
crates/liteparse-python/: Cargo.toml
crates/liteparse-python/src/: cli.rs  lib.rs
crates/liteparse-wasm/: Cargo.toml  build.rs
crates/liteparse-wasm/src/: lib.rs  wasi_stubs.rs
crates/liteparse/src/: config.rs  conversion.rs  extract.rs  font_db_resolver.rs  main.rs  ocr_merge.rs  parser.rs  projection.rs  types.rs
crates/liteparse/src/markdown_layout/: classify.rs  headings.rs  inline.rs  lists.rs  paragraphs.rs  tables.rs  test_helpers.rs
crates/liteparse/src/ocr/: http_simple.rs  oar.rs
crates/liteparse/src/output/: json.rs  markdown.rs  text.rs
crates/liteparse/tests/: integration_test.rs
crates/pdfium-sys/: build.rs
crates/pdfium-sys/src/: dynamic.rs
crates/pdfium/src/: lib.rs  page.rs
dataset_eval_utils/: pyproject.toml
dataset_eval_utils/src/liteparse_eval/: benchmark.py
dataset_eval_utils/src/liteparse_eval/providers/: __init__.py
dataset_eval_utils/src/liteparse_eval/providers/parsers/: __init__.py  liteparse.py  opendataloader.py
wasm-demo-site/: index.html
